--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -158,7 +158,7 @@
   .profile-picture {
     float: left;
     margin-right: 20px;
-    width: 150px;
+    width: 100px;
   }
   .user-info {
     float: left;
@@ -166,13 +166,20 @@
 
     .user-realname {
       color: #555;
-      font-size: 30px;
+      font-size: 24px;
       margin: 0;
+      margin-bottom: 5px;
     }
     .user-about {
       color: #888;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 1.5;
+      margin: 0;
+      margin-bottom: 5px;
+    }
+    .profile-menu {
+      border-top: 1px solid #dfdfdf;
+      padding-top: 10px;
     }
   }
 }
