--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -117,9 +117,47 @@
 
   .wall-name {
     color: #555;
-    margin: 0 0 10px 0;
+    font-size: 24px;
+    margin: 0;
   }
 
+  .description {
+    border-top: 1px solid #dfdfdf;
+    font-size: 11px;
+    padding-top: 10px;
+    color: #555;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1;
+    margin: 5px 0 5px 0;
+  }
+
+  .user-container {
+    p {
+      line-height: 1;
+      margin: 0;
+    }
+    .profile-picture {
+      float: left;
+      margin-right: 10px;
+      width: 30px;
+      img {
+        height: 30px;
+        width: 30px;
+      }
+    }
+    .created-by-label {
+      color: #aaa;
+      font-size: 10px;
+      font-weight: bold;
+    }
+    .user-realname {
+      color: #888;
+      font-size: 12px;
+      font-weight: bold;
+      margin: 0;
+    }
+  }
   .score-count {
     color: #ccc;
     float: right;
@@ -143,13 +181,6 @@
     margin-left: 20px;
   }
 
-  .description {
-    color: #999;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 1;
-    margin: 0 0 10px 0;
-  }
 }
 
 .user-profile-container {
