--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -190,6 +190,9 @@
     float: left;
     margin-right: 20px;
     width: 100px;
+    img {
+      width: 100px;
+    }
   }
   .user-info {
     float: left;
