--- a/src/Adstacy/AppBundle/Resources/views/User/show_walls.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_walls.html.twig
@@ -2,10 +2,19 @@
 
 {% block show_content %}
   {% for wall in walls %}
-    <h4>{{ wall.name }}</h4>
-    {% for ad in wall.ads|slice(0, 9) %}
-      {{ ad.description }}
-      <img src="{{ vich_uploader_asset(ad.image, 'file')|imagine_filter('mini_thumb') }}" width="{{ mini_thumb_size }}" height="{{ mini_thumb_size }}" />
-    {% endfor %}
+    <div class="wall-thumb panel panel-defaul">
+      <h4 class="wall-name"><a href="{{ path('adstacy_app_wall_show', { id: wall.id }) }}">{{ wall.name }}</a></h4>
+      <div class="clearfix">
+        {% set ads = wall.ads|slice(0, 4) %}
+        {% for i in 0..3 %}
+          <div class="ad-thumb-{{ i+1 }} ad-thumb">
+            {% if ads[i] is defined %}
+              <img src="{{ vich_uploader_asset(ads[i].image, 'file')|imagine_filter('mini_thumb') }}" width="{{ mini_thumb_size }}" height="{{ mini_thumb_size }}" />
+            {% endif %}
+          </div> 
+        {% endfor %}
+      </div>
+      <a class="btn btn-primary btn-block">Follow</a>
+    </div>
   {% endfor %}
 {% endblock %}
