Add mini user in ad show.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -40,6 +40,9 @@ body {
   .inline-block a {
     padding: 5px;
   }
+  .ad-user {
+    padding: 5px;
+  }
 }
 
 .pic {
@@ -281,4 +284,32 @@ a.url {
 
 .select2-container {
   min-width: 250px;
+}
+
+.user-mini {
+  .user-desc {
+    line-height: 1;
+    margin: 0;
+    float: left;
+  }
+  .profile-picture {
+    float: left;
+    margin-right: 10px;
+    width: 30px;
+    img {
+      height: 30px;
+      width: 30px;
+    }
+  }
+  .user-label {
+    color: #aaa;
+    font-size: 10px;
+    font-weight: bold;
+  }
+  .user-realname {
+    color: #888;
+    font-size: 12px;
+    font-weight: bold;
+    margin-top: 2px;
+  }
 }
