--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -22,5 +22,8 @@
         </a>
       {% endif %}
     </div>
+    <div class="ad-user clearfix border-top">
+      {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.wall.user, text: 'Ads by'} %}
+    </div>
   </div>
 </div>
