Get ad's user directly from ad.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -23,7 +23,7 @@
       {% endif %}
     </div>
     <div class="ad-user clearfix border-top">
-      {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.wall.user, text: 'Ads by'} %}
+      {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: 'Ads by'} %}
     </div>
   </div>
 </div>
