Ajax follow user button.

--- a/src/Adstacy/AppBundle/Resources/views/User/show_followings.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_followings.html.twig
@@ -20,6 +20,7 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
+      $('.user-thumb').ajaxlink('user_profile');
       $('.jscroll').jscroll({
         nextSelector: 'a.next-page',
         callback: function(a, b) {
