Refactor user followers/followings.

--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -45,6 +45,6 @@
 {% block javascripts %}
   {{ parent() }}
   <script type="text/javascript">
-    $('.user-info').ajaxlink('user_profile');
+    $('.user-info').ajaxlink('follow_user');
   </script>
 {% endblock %}
