--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -223,8 +223,10 @@
 
 .user-thumb {
   width: 236px;
+  height: 213px;
   margin: 14px 7px 0 7px;
   padding: 5px 10px;
+  float: left;
 
   .user-info {
     float: left;
