--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -4,16 +4,6 @@
 
 {% block meta_keywords %}{{ ad.tags|join(',') }}{% endblock %}
 
-{% block facebook_scripts %}
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=138676862997429";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-{% endblock %}
-
 {% block content %}
   {% set wall = ad.wall %}
   {% set user = wall.user %}
@@ -21,52 +11,58 @@
   <div class="adstacy-container ad-detail-container">
     <div class="table-row">
       <div class="table-cell ad-detail-pic centered">
+        <div class="h-stack">
+          <a class="centered stack-item btn-muted">{{ ad.promoteesCount }} promotes</a>
+          <a href="/app_dev.php/ads/63/unpromote" data-toggle="tooltip" title="" class="stack-item centered btn-pad btn-success unpromote hide" data-original-title="Unpromote">
+            <span aria-hidden="true" class="icon-bullhorn"></span> Unpromote
+          </a>
+          <a href="/app_dev.php/ads/63/promote" data-toggle="tooltip" title="" class="stack-item centered btn-pad btn-primary promote" data-original-title="Promote">
+            <span aria-hidden="true" class="icon-bullhorn"></span> Promote
+          </a>
+          <a class="tweet stack-item centered btn-twitter btn-pad btn-muted" href="{{ app.request.uri }}" data-via="adstacy" data-text="{{ ad.description }}">
+            <span aria-hidden="true" data-icon="&#xe002;"></span> Tweet
+          </a>
+          <a class="facebook-share stack-item centered btn-facebook btn-pad btn-muted" href="{{ app.request.uri }}">
+            <span aria-hidden="true" data-icon="&#xe003;"></span> Share
+          </a>
+        </div>
         <img src="{{ vich_uploader_asset(ad.image, 'file') }}" alt="{{ ad.description }}">
       </div>
-      <div class="table-cell" style="width: 400px;">
-        <section class="ad-detail-section list-section">
-          <h3>Description</h3>
+      <div class="table-cell" style="width: 250px;">
+        <section class="ad-detail-section">
           <p>{{ parse_hashtag(ad.description) }}</p>
-          <p>
-            {{ ad.promoteesCount }} promotes
-            <a href="/app_dev.php/ads/63/unpromote" data-toggle="tooltip" title="" class="btn btn-success unpromote hide" data-original-title="Unpromote">
-              <span aria-hidden="true" class="icon-bullhorn"></span>
-            </a>
-            <a href="/app_dev.php/ads/63/promote" data-toggle="tooltip" title="" class="btn btn-primary promote" data-original-title="Promote">
-              <span aria-hidden="true" class="icon-bullhorn"></span>
-            </a>
-          </p>
-
-
-
-          <a href="https://twitter.com/share" class="twitter-share-button" data-related="adstacy">Tweet</a>
-          <div class="fb-like" data-width="200" data-show-faces="false" data-send="false"></div>
         </section>
-        <section class="ad-detail-section list-section">
-          <h3>Wall</h3>
-          <p><a href="{{ path('adstacy_app_wall_show', {id: ad.wall.id}) }}">{{ ad.wall.name }}</a></p>
-          {% if app.user == user %}
-            <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-primary">Edit</a>
-            <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary btn-log">Delete</a>
-          {% endif %}
+        <section class="ad-detail-section">
+          <div class="wall-container">
+            <div class="wall-pic">
+              <img data-src="holder.js/50x50">
+            </div>
+            <div class="wall-detail">
+              <h3><a href="{{ path('adstacy_app_wall_show', {id: ad.wall.id}) }}">{{ ad.wall.name }}</a></h3>
+              <h4><a href="#">{{ wall.user.username }}</a></h4>
+            </div>
+          </div>
+          <div class="thumb-container">
+            <div class="thumb"><img data-src="holder.js/110x110"></div>
+            <div class="thumb"><img data-src="holder.js/110x110"></div>
+            <div class="thumb"><img data-src="holder.js/110x110"></div>
+            <div class="thumb"><img data-src="holder.js/110x110"></div>
+          </div>
           {% include 'AdstacyAppBundle:Wall:follow_button.html.twig' with {wall: wall} %}
         </section>
 
-        <section class="ad-detail-section list-section">
-          <div class="list-block" style="width: 100px;">
-            <img data-src="holder.js/100x100">
-          </div>
-          <div class="list-block">
-            <h3>{{ wall.user.username }}</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, praesentium? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, tenetur.</p>
-          </div>
-        </section>
+        {% if app.user == user %}
+          <section class="ad-detail-section list-section">
+            <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-primary">Edit</a>
+            <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary btn-log">Delete</a>
+          </section>
+        {% endif %}
+
 
       </div>
     </div>
     <div class="ad-detail-content">
       {{ ad.content }}
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, voluptate, quaerat, possimus, magnam iste voluptatibus nihil soluta enim eum optio esse nisi adipisci blanditiis aperiam officiis aspernatur veritatis illo ab perspiciatis pariatur eligendi asperiores atque qui assumenda deserunt nobis est illum rem aliquam odit. Esse, minus, libero, commodi, quisquam cum asperiores et odio ratione explicabo non ducimus at pariatur autem cumque tenetur dolorem dolore. Facilis, rerum, in ratione odio aliquid aperiam nobis facere deleniti. Nostrum, est quidem eius libero inventore. Aperiam, fugit magnam optio laboriosam officia reiciendis voluptatum quae dignissimos maxime numquam alias accusantium modi libero vitae dolores odio suscipit.
     </div>
   </div>
   <div class="modal fade" id="confirm-modal">
@@ -86,8 +82,6 @@
       </div>
     </div>
   </div>
-
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 {% endblock %}
 
 {% block javascripts %}
