--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -2,19 +2,40 @@
 
 {% block title %}{{ user.username }} | Adstacy{% endblock %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyuser/less/settings.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
+
 {% block content %}
+  <div class="adstacy-container user-profile-container panel panel-default clearfix">
+    <div class="profile-picture">
+      <img src="{{ profile_pic(user) }}" />
+    </div>
+
+    <div class="user-info">
+      <h1 class="user-realname">{{ user.realname }}</h1>
+      <h2 class="user-about">{{ user.about }}</h2>
+      <div class="profile-menu">
+          <a class="btn btn-primary" href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ adsCount }} Ads</a>
+          <a class="btn" href="{{ path('adstacy_app_user_walls', {username: user.username}) }}">{{ wallsCount }} Walls</a>
+          <a class="btn" href="{{ path('adstacy_app_user_promotes', {username: user.username}) }}">{{ promotesCount }} Promotes</a>
+          <a class="btn" href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
+          <a class="btn" href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
+          {% if app.user and app.user != user %}
+            {% set followed = app.user.hasFollowUser(user) %}
+            <a class="btn unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a> 
+            <a class="btn follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a> 
+          {% endif %}
+
+      </div>
+    </div>
+  </div>
   <div class="adstacy-container user-profile">
-    <a class="btn btn-primary" href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ adsCount }} Ads</a>
-    <a class="btn btn-primary" href="{{ path('adstacy_app_user_walls', {username: user.username}) }}">{{ wallsCount }} Walls</a>
-    <a class="btn btn-primary" href="{{ path('adstacy_app_user_promotes', {username: user.username}) }}">{{ promotesCount }} Promotes</a>
-    <a class="btn btn-primary" href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
-    <a class="btn btn-primary" href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
-    {% if app.user and app.user != user %}
-      {% set followed = app.user.hasFollowUser(user) %}
-      <a class="btn btn-primary unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a> 
-      <a class="btn btn-primary follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a> 
-    {% endif %}
-    <img src="{{ profile_pic(user) }}" />
     {% block show_content %}{% endblock %}
   </div>
 {% endblock %}
