--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -151,3 +151,35 @@
     margin: 0 0 10px 0;
   }
 }
+
+.user-profile-container {
+  padding: 10px 20px;
+
+  .profile-picture {
+    float: left;
+    margin-right: 20px;
+    width: 100px;
+  }
+  .user-info {
+    float: left;
+    width: 85%;
+
+    .user-realname {
+      color: #555;
+      font-size: 24px;
+      margin: 0;
+      margin-bottom: 5px;
+    }
+    .user-about {
+      color: #888;
+      font-size: 16px;
+      line-height: 1.5;
+      margin: 0;
+      margin-bottom: 5px;
+    }
+    .profile-menu {
+      border-top: 1px solid #dfdfdf;
+      padding-top: 10px;
+    }
+  }
+}
