change show ad layout.

--- a/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
@@ -11,7 +11,7 @@
     <label for="password" class="hide">{{ 'security.login.password'|trans }}</label>
     <input type="password" class="form-control input-sm" id="password" name="_password" required="required" placeholder="Password">
 
-    <div class="table-block">
+    <div class="h-stack">
       <div class="span2of3">
         <input type="checkbox" id="remember_me" name="_remember_me" value="on">
         <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
