--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -228,25 +228,6 @@ a.url {
   border-right: 1px solid @border-color;
 }
 
-.ad-detail-section {
-  border-bottom: 1px solid @border-color;
-
-  h3 {
-    margin: 0;
-    border-bottom: 1px solid @border-color;
-  }
-
-  p {
-    margin: 10px 0 0;
-    font-size: 14px;
-  }
-}
-
-.centered {
-  text-align: center;
-  vertical-align: middle;
-}
-
 .ad-detail-container {
   background-color: #fff;
   border-radius: 5px;
@@ -334,4 +315,105 @@ a.url {
     font-weight: bold;
     margin-top: 2px;
   }
+}
+
+.btn-pad {
+  padding: 10px;
+}
+
+// ----------------------------------
+
+.h-stack {
+  display: table;
+  width: 100%;
+
+  > .stack-item {
+    display: table-cell;
+    vertical-align: top;
+  }
+}
+
+.centered {
+  text-align: center !important;
+  vertical-align: middle !important;
+}
+
+.inline-block {
+  font-size: 0;
+
+  > div, a {
+    font-size: initial;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  > a {
+    text-align: center;
+    text-decoration: none;
+  }
+}
+
+.span1of2 {
+  width: 50%;
+}
+
+.span1of3 {
+  width: 33.34%;
+}
+
+.span2of3 {
+  width: 66.66%;
+}
+
+.btn-muted {
+  .button-variant(@gray; #f8f8f8; #f8f8f8);
+}
+
+// ----------------------
+
+
+.ad-detail-section {
+  border-bottom: 1px solid @border-color;
+
+  p {
+    padding: 10px;
+    margin: 0;
+  }
+}
+.wall-container {
+  font-size: 0;
+  width: 250px;
+  padding: 10px;
+  border-bottom: 1px solid @border-color;
+}
+.wall-pic, .wall-detail {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+}
+.wall-pic {
+  width: 50px;
+  height: 50px;
+}
+.wall-detail {
+  h3 {
+    font-weight: bold;
+  }
+  h3, h4 {
+    margin: 0;
+  }
+}
+.thumb-container {
+  font-size: 0;
+  width: 250px;
+  padding: 0 10px 10px 0;
+  border-bottom: 1px solid @border-color;
+}
+.thumb {
+  font-size: 16px;
+  width: 110px;
+  height: 110px;
+  display: inline-block;
+  margin: 10px 0 0 10px;
+  border-radius: 2px;
 }
