Fix wall margin.

--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -205,17 +205,17 @@
     width: 206px;
   }
   .ad-thumb-1, .ad-thumb-3 {
-    margin-right: 1px;
+    margin-right: 10px;
+    margin-bottom: 10px;
   }
   .ad-thumb {
     background-color: #eeeeee;
     border: 1px solid #dfdfdf;
-    display: inline-block;
+    float: left;
     height: 103px;
     width: 103px;
     img {
       border-radius: 3px;
-      float: left;
     }
   }
 }
