--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -6,12 +6,12 @@
       width="{{ thumb_width }}px" height="{{ ad.thumbHeight }}px" alt="{{ ad.description }}">
     </a>
   </div>
-  <div class="ad-desc border-top">
+  <div class="ad-desc">
     <div class="desc">
       <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
     </div>
     <div class="inline-block">
-      <a class="border-top {% if app.user %}box-medium{% else %}box-large{% endif %} btn-muted"><span class="promotes-count">{{ ad.promoteesCount }}</span> promotes</a>
+      <a class="{% if app.user %}box-medium{% else %}box-large{% endif %} btn-muted btn-gray"><span class="promotes-count">{{ ad.promoteesCount }}</span> promotes</a>
       {% if app.user %}
         {% set promoted = app.user.hasPromote(ad) %}
         <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" data-toggle="tooltip" title="Unpromote" class="btn-success unpromote {% if not promoted %}hide{% endif %}">
