--- a/src/Adstacy/AppBundle/Resources/public/css/social-buttons.css
+++ b/src/Adstacy/AppBundle/Resources/public/css/social-buttons.css
@@ -10,13 +10,13 @@
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #2b4b90;
-  *background-color: #133783;
-  background-image: -moz-linear-gradient(top, #3b5998, #133783);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3b5998), to(#133783));
-  background-image: -webkit-linear-gradient(top, #3b5998, #133783);
-  background-image: -o-linear-gradient(top, #3b5998, #133783);
-  background-image: linear-gradient(to bottom, #3b5998, #133783);
-  background-repeat: repeat-x;
+  /**background-color: #133783;*/
+  /*background-image: -moz-linear-gradient(top, #3b5998, #133783);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3b5998), to(#133783));*/
+  /*background-image: -webkit-linear-gradient(top, #3b5998, #133783);*/
+  /*background-image: -o-linear-gradient(top, #3b5998, #133783);*/
+  /*background-image: linear-gradient(to bottom, #3b5998, #133783);*/
+  /*background-repeat: repeat-x;*/
   border-color: #133783 #133783 #091b40;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3b5998', endColorstr='#ff133783', GradientType=0);
@@ -43,13 +43,13 @@
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #1c95d0;
-  *background-color: #0271bf;
-  background-image: -moz-linear-gradient(top, #2daddc, #0271bf);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2daddc), to(#0271bf));
-  background-image: -webkit-linear-gradient(top, #2daddc, #0271bf);
-  background-image: -o-linear-gradient(top, #2daddc, #0271bf);
-  background-image: linear-gradient(to bottom, #2daddc, #0271bf);
-  background-repeat: repeat-x;
+  /**background-color: #0271bf;*/
+  /*background-image: -moz-linear-gradient(top, #2daddc, #0271bf);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2daddc), to(#0271bf));*/
+  /*background-image: -webkit-linear-gradient(top, #2daddc, #0271bf);*/
+  /*background-image: -o-linear-gradient(top, #2daddc, #0271bf);*/
+  /*background-image: linear-gradient(to bottom, #2daddc, #0271bf);*/
+  /*background-repeat: repeat-x;*/
   border-color: #0271bf #0271bf #014473;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2daddc', endColorstr='#ff0271bf', GradientType=0);
