--- a/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
@@ -12,11 +12,11 @@
     <input type="password" class="form-control input-sm" id="password" name="_password" required="required" placeholder="Password">
 
     <div class="h-stack">
-      <div class="span2of3">
+      <div class="stack-item w7">
         <input type="checkbox" id="remember_me" name="_remember_me" value="on">
         <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
       </div>
-      <div class="span1of3">
+      <div class="stack-item w3">
         <input type="submit" class="btn btn-primary btn-sm pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
       </div>
     </div>
