expand search-bar.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -57,8 +57,9 @@ body {
   padding: 7px 14px;
 }
 
-#search {
+#search-bar {
   padding-right: 40px;
+  width: 360px;
   &:focus + button span {
     color: darken(@input-color-placeholder, 20%);
   }
