--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -89,7 +89,7 @@
                 </li>
               </ul>
               <form action="{{ path('adstacy_app_search') }}" class="navbar-form navbar-left" style="position: relative;" role="search">
-                <input id="search" type="text" class="form-control" placeholder="Search" name="q" value="{{ app.request.query.get('q') }}" >
+                <input id="search-bar" type="text" class="form-control" placeholder="Search" name="q" value="{{ app.request.query.get('q') }}" >
                 <button type="submit" class="search-btn">
                   <span aria-hidden="true" data-icon="&#xe007;"></span>
                 </button>
