--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -33,7 +33,7 @@
 
           {{ form_row(form.content) }}
 
-          {{ form_widget(form.ad, { attr: { class: 'form-control btn btn-primary' } }) }}
+          {{ form_widget(form.save, {attr: {class: 'form-control btn btn-primary'}}) }}
 
           {{ form_rest(form) }}
         </div>
