Change wall form label.

--- a/src/Adstacy/AppBundle/Resources/views/Wall/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/form.html.twig
@@ -16,7 +16,7 @@
         {{ form_errors(form) }}
         {{ form_rest(form) }}
 
-        <input type="submit" class="btn btn-primary btn-block" value="Create Wall" />
+        <input type="submit" class="btn btn-primary btn-block" value="Save" />
       {{ form_end(form) }}
     </section>
   </div>
