--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -57,14 +57,11 @@
       <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" type="text/javascript"></script>
     {% endblock %}
     {% if not app.debug %}
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-38929872-2', 'adstacy.com');
-        ga('send', 'pageview');
+      <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-38929872-2']);
+        _gaq.push(['_trackPageview']);
+        _gaq.push(['_setDomainName', 'adstacy.com']);
       </script>
     {% endif %}
   </head>
@@ -188,6 +185,13 @@
     {% endblock %}
 
     {% block javascripts %}
+      <script type="text/javascript"> 
+        (function() {
+          var ga = document.createElement('script');     ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:'   == document.location.protocol ? 'https://ssl'   : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+      </script>
       {% javascripts filter='uglifyjs2'
         '@AdstacyAppBundle/Resources/public/js/app.js'
       %}
