fix login social btn hover state. drop unused class.

--- a/src/Adstacy/AppBundle/Resources/public/css/social-buttons.css
+++ b/src/Adstacy/AppBundle/Resources/public/css/social-buttons.css
@@ -29,8 +29,8 @@
 .btn-facebook.active,
 .btn-facebook.disabled,
 .btn-facebook[disabled] {
-  color: #ffffff;
-  background-color: #133783;
+  color: #ffffff !important;
+  background-color: #133783 !important;
   *background-color: #102e6d;
 }
 
@@ -62,8 +62,8 @@
 .btn-twitter.active,
 .btn-twitter.disabled,
 .btn-twitter[disabled] {
-  color: #ffffff;
-  background-color: #0271bf;
+  color: #ffffff !important;
+  background-color: #0271bf !important;
   *background-color: #0262a6;
 }
 
