--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -153,9 +153,22 @@ ul.nav-expand {
   max-height: 10em;
 
   li {
-    margin: 0 7px;
-    width: 234px;
+    width: 250px;
     float: left;
+  }
+
+  a {
+    color: greyscale(@brand-primary);
+    padding: 0 7px;
+
+    &:hover {
+      color: @brand-primary;
+      text-decoration: none;
+      font-weight: bold;
+      background-color: @gray-lighter;
+      box-shadow: inset 0 0 3px 0 rgba(200,200,200,.9);
+      border-radius: 5px;
+    }
   }
 }
 
