--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -165,6 +165,11 @@
               <li><a href="#">Rumah Sakit</a></li>
               <li><a href="#">Tempat Wisata</a></li>
             </ul>
+            <ul id="footer" class="adstacy-container clearfix">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Privacy and Terms</a></li>
+              <li><a href="#">Copyright and Trademark</a></li>
+            </ul>
           </div>
         </nav>
       </header>
@@ -186,7 +191,7 @@
 
     {% block javascripts %}
       {% if not app.debug %}
-      <script type="text/javascript"> 
+      <script type="text/javascript">
         (function() {
           var ga = document.createElement('script');     ga.type = 'text/javascript'; ga.async = true;
           ga.src = ('https:'   == document.location.protocol ? 'https://ssl'   : 'http://www') + '.google-analytics.com/ga.js';
