--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -147,7 +147,7 @@ body {
 
 ul.nav-expand {
   list-style-type: none;
-  margin: auto;
+  margin-bottom: 10px;
   padding: 0;
   line-height: 2;
   overflow: hidden;
@@ -436,5 +436,21 @@ a.url {
   img {
     vertical-align: middle;
     display: inline-block;
+  }
+}
+
+#footer {
+  list-style-type: none;
+  padding: 10px 0 0;
+  border-top: 1px solid @border-color;
+
+  li {
+    float: left;
+    padding: 0 7px;
+    border-right: 1px solid @border-color;
+
+    &:first-child {
+      border-left: 1px solid @border-color;
+    }
   }
 }
