--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -98,16 +98,21 @@
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                   <li>
                     <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads" class="btn btn-primary navbar-btn">
-                      <span aria-hidden="true" class="icon-plus"></span> Create Ads
+                      <span aria-hidden="true" class="icon-plus"></span> Ads
                     </a>
                   </li>
-                  <li id="user-dropdown" class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ app.user.username }}<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">Profile</a></li>
-                      <li><a href="{{ path('fos_user_profile_edit') }}">Settings</a></li>
-                      <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
-                    </ul>
+                  <li id="user-dropdown">
+                    <div class="btn-group navbar-btn">
+                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <img class="mini-profpic" src="{{ profile_pic(app.user) }}" alt="{{ app.user.username }}" width="20" height="20" /> &nbsp;
+                        {{ app.user.username }}
+                      </button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">Profile</a></li>
+                        <li><a href="{{ path('fos_user_profile_edit') }}">Settings</a></li>
+                        <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                      </ul>
+                    </div>
                   </li>
                 {% else %}
                   <li class="dropdown">
