--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -65,6 +65,12 @@ body {
   }
 }
 
+@media screen and (max-width: @screen-tablet) {
+  #search-bar {
+    width: 100%;
+  }
+}
+
 .search-btn {
   background-color: transparent;
   border: none;
@@ -244,7 +250,11 @@ a.url {
 
 #user-dropdown {
   li a {
-    padding: 10px 20px;
+    padding: 8px 15px;
+  }
+  .dropdown-toggle {
+    min-width: 110px;
+    text-align: left;
   }
 }
 
